--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>Карта школы</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='style/style.css') }}" />
 </head>
 <body>
     <header class="header">
         <a href="" class="header-logo">
-            <img src="other/uunit.svg" alt="" class="header-photo">
+            <img src="{{ url_for('static', filename='other/uunit.svg') }}" alt="" class="header-photo">
         </a>
         <div class="header-level">
             <button class="level active">
@@ -24,7 +24,7 @@
     </header>
 
     <div class="map-container">
-        <img src="map.png" alt="Карта школы" class="school-map" />
+        <img src="{{ url_for('static', filename='other/map.png') }}" alt="Карта школы" class="school-map" />
         <div class="marker" style="top: 61%; left: 45%;" title="самолет"></div>
     </div>
 </body>
