--- a/templates/base.html
+++ b/templates/base.html
@@ -22,10 +22,8 @@
             </button>
         </div>
     </header>
-
-    <div class="map-container">
-        <img src="{{ url_for('static', filename='other/map.png') }}" alt="Карта школы" class="school-map" />
-        <div class="marker" style="top: 61%; left: 45%;" title="самолет"></div>
+    <div class="container">
+        {% block content %}{% endblock %}
     </div>
 </body>
 </html>
