--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1,16 +1,25 @@
 body {
-    margin: 0;
-    padding: 0;
+  font-family: 'Inter', sans-serif;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(180deg, #e0f2fe 0%, #f0fdfa 100%);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 
 .header{
     display: flex;
     height: 80px;
-    background-color:aqua;
-    justify-content:space-between;
+    background-color: #e0f7fa;
+    justify-content: space-between;
     padding-inline: 40px;
     align-items: center;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    transition: background-color 0.3s ease;
 }
 
 .header-logo{
@@ -21,24 +30,24 @@ body {
 .header-level{
     display: flex;
     justify-content:space-between;
-    width: 20%;
+    gap: 12px;
 }
 .level{
     width: 48px;
     height: 48px;
-    border-radius: 12px;
+    border-radius: 16px;
     background-color: #f3f4f6;
-    color: #1f2937; 
+    color: #1f2937;
     font-weight: 600;
     font-size: 16px;
     border: none;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
     cursor: pointer;
     transition: all 0.2s ease;
 }
 
 .level:hover {
-    background-color: #3b82f6; /* синий при наведении */
+    background-color: #3b82f6;
     color: #ffffff;
     transform: translateY(-2px);
 }
@@ -55,15 +64,21 @@ body {
 
 }
 
+
 .map-container {
-    position: relative;
-    width: 100%;
-    margin: auto;
+  position: relative;
+  width: 100%;
+  padding-top: 45.25%; /* 16:9 = 9/16 = 0.5625 */
+   margin: auto;
 }
   
 .school-map {
-    width: 100%;
-    display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
   
 .marker {
@@ -89,5 +104,38 @@ body {
     border-radius: 4px;
     font-size: 12px;
     white-space: nowrap;
+    transform: scale(1.3) translate(-50%, -50%);
 }
-  
+
+.about {
+
+  display: flex;
+  justify-content: center;
+  border-top: 1px solid #e5e7eb;
+
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(4px);
+  border-radius: 16px;
+  margin: 40px 70px;
+  padding: 40px 20px;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.05);
+}
+
+.about-content {
+  max-width: 800px;
+  text-align: center;
+}
+
+.about-content h2 {
+  font-size: 32px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  color: #1f2937;
+}
+
+.about-content p {
+  font-size: 18px;
+  color: #4b5563;
+  line-height: 1.6;
+  margin-bottom: 16px;
+}
